fix: ENTESB-10521 Not visible items in Fuse Console Preferences

--- a/packages/online/src/main.less
+++ b/packages/online/src/main.less
@@ -6,7 +6,6 @@
 @pf-padding: @grid-gutter-width / 2;
 
 #main {
-  height: unset;
   min-height: 100%;
   background-color: @color-pf-black-150;
 }
